--- a/portfolio.html
+++ b/portfolio.html
@@ -78,12 +78,19 @@
         <!--photo-->
         <section class="section">
           <div class="container">
-          <ul class="list">
+            <div class="col-4">
+              <div class="card">
+             <ul class="list">
             <li>
               <img src="./images/g1.jpg" alt="веб сайт" width="370" />
               <h3 class="section-title">Технокряк</h3>
               <p class="section-post-title">Веб сайт</p>
             </li>
+            </div>
+            </div>
+            </div>
+        
+
 
             <li>
               <img src="./images/g2.jpg" alt="Дизайн" width="370" />
