--- a/index.html
+++ b/index.html
@@ -24,30 +24,33 @@
     <!--Зміст-->
 
     <header class="header">
-      <div class="container">
-        <div class="d-flex justify-between align-center">
-          <a class="logo-link" href="./index.html"
+      <div class="container header-container">
+        <nav class="nav-container">
+          <a class="header-logo" href="./index.html"
             ><span class="logo">Web</span>Studio</a
           >
-          <nav class="nav-container mr-auto">
-            <!--навігація на інші сторінки-->
-            <ul class="list d-flex justify-between">
-              <li><a class="link nave" href="./index.html">Студия</a></li>
-              <li class="ml-50">
-                <a class="link nave" href="./portfolio.html">Портфолио</a>
-              </li>
-              <li class="ml-50"><a class="link nave" href="">Контакты</a></li>
-            </ul>
-          </nav>
+          <ul class="header-list">
+            <li class="header-item">
+              <a class="link nave" href="./index.html">Студия</a>
+            </li>
+            <li class="header-item">
+              <a class="link nave" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="header-item">
+              <a class="link nave" href="">Контакты</a>
+            </li>
+          </ul>
+        </nav>
 
-          <ul class="list d-flex">
+        <div class="header-connect">
+          <ul class="list">
             <li>
-              <a class="link grey" href="mailto:info@devstudio"
+              <a class="link grey header-mail" href="mailto:info@devstudio"
                 >info@devstudio.com</a
               >
             </li>
 
-            <li class="ml-50">
+            <li class="header-tel">
               <a class="link grey" href="tel:+380991111111"
                 >+38 096 111 11 11</a
               >
