--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
         <div class="header-connect">
           <ul class="list">
-            <li>
-              <a class="link grey header-mail" href="mailto:info@devstudio"
+            <li class="header-mail">
+              <a class="link grey" href="mailto:info@devstudio"
                 >info@devstudio.com</a
               >
             </li>
@@ -63,48 +63,46 @@
     <div class="line"></div>
 
     <main>
-      <!--унікальний контент сторінки-->
-      <section class="container-hero d-flex align-center mb-94">
+      <!-----------HERO------------------------------------------>
+      <section class="container-hero d-flex text-center mb-94">
         <div class="container">
           <h1 class="hero-title">
-            эффективные решения<br />
-            для вашего бизнеса
+            эффективные решения<br> 
+            для вашего бизнеса</br>
           </h1>
-          <button class="button button-style" type="button">
-            Заказать услугу
-          </button>
+          <button class="button-style" type="button">Заказать услугу</button>
         </div>
       </section>
 
-      <!--вся розмітка з прикладу-->
+      <!--------SECTION-------------------------------------------->
 
-      <section class="ash mb-94">
+      <section class="title mb-94">
         <div class="container">
           <ul class="list row">
             <li class="col-3">
-              <h3 class="ash-post">внимание к деталям</h3>
-              <p class="ash-p">
+              <h3 class="h3-title">внимание к деталям</h3>
+              <p class="p-title">
                 Идейные соображения,а также начало повседневной работы по
                 формированию позиции
               </p>
             </li>
             <li class="col-3">
-              <h3 class="ash-post">пунктуальность</h3>
-              <p class="ash-p">
+              <h3 class="h3-title">пунктуальность</h3>
+              <p class="p-title">
                 Задача организации,в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
             <li class="col-3">
-              <h3 class="ash-post">планирование</h3>
-              <p class="ash-p">
+              <h3 class="h3-title">планирование</h3>
+              <p class="p-title">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
             <li class="col-3">
-              <h3 class="ash-post">современные технологии</h3>
-              <p class="ash-p">
+              <h3 class="h3-title">современные технологии</h3>
+              <p class="p-title">
                 Значимость этих проблем настолько очевидна,что реализация
                 плановых заданий
               </p>
@@ -115,7 +113,7 @@
       <!--Чем мы занимаемся,фотки-->
       <section class="section-title mb-94">
         <div class="container">
-          <h2 class="ash-title text-center mb-50">Чем мы занимаемся</h2>
+          <h2 class="h2-title text-center mb-50">Чем мы занимаемся</h2>
           <ul class="list row">
             <li class="col-4">
               <img src="./images/photo1.jpg" alt="розробка" width="370" />
@@ -130,56 +128,67 @@
         </div>
       </section>
       <!--наша команда секція-->
-      <section class="section-name bg-light-grey text-center">
+      <section class="section-our-teams team-bg-light-grey text-center">
         <div class="container">
-          <h2 class="ash-title mb-50">Наша команда</h2>
-          <ul class="list row team-br">
+          <h2 class="h2-title mb-50">Наша команда</h2>
+          <ul class="list row">
             <li class="col-3">
-              <div class="bg-white shadow">
+              <div class="team-bg-white shadow-team team-br">
                 <img
                   class="mb-30"
                   src="./images/img1.jpg"
                   alt="фото"
                   width="270"
                 />
-                <h3 class="name-spesh">Игорь Демьяненко</h3>
-                <p class="name-id">Product Designer</p>
-              </div>
-            </li>
-
-            <li class="col-3">
-              <div class="bg-white shadow">
-                <img src="./images/img2.jpg" alt="фото" width="270" />
                 <div class="team-member">
-                  <h3 class="name-spesh mb-10">Ольга Репина</h3>
-                  <p class="name-id">Frontend Developer</p>
+                  <h3 class="team-specialist mb-10">Игорь Демьяненко</h3>
+                  <p class="team-id">Product Designer</p>
                 </div>
               </div>
             </li>
 
             <li class="col-3">
-              <div class="bg-white shadow">
+              <div class="team-bg-white shadow-team team-br">
+                <img
+                  class="mb-30"
+                  src="./images/img2.jpg"
+                  alt="фото"
+                  width="270"
+                />
+                <div class="team-member">
+                  <h3 class="team-specialist mb-10">Ольга Репина</h3>
+                  <p class="team-id">Frontend Developer</p>
+                </div>
+              </div>
+            </li>
+
+            <li class="col-3">
+              <div class="team-bg-white shadow-team team-br">
                 <img
                   class="mb-30"
                   src="./images/img3.jpg"
                   alt="фото"
                   width="270"
                 />
-                <h3 class="name-spesh">Николай Тарасов</h3>
-                <p class="name-id">Marketing</p>
+                <div class="team-member">
+                  <h3 class="team-specialist mb-10">Николай Тарасов</h3>
+                  <p class="team-id">Marketing</p>
+                </div>
               </div>
             </li>
 
             <li class="col-3">
-              <div class="bg-white shadow">
+              <div class="team-bg-white shadow-team team-br">
                 <img
                   class="mb-30"
                   src="./images/img4.jpg"
                   alt="фото"
                   width="270"
                 />
-                <h3 class="name-spesh">Михаил Ермаков</h3>
-                <p class="name-id">UL Designer</p>
+                <div class="team-member">
+                  <h3 class="team-specialist mb-10">Михаил Ермаков</h3>
+                  <p class="team-id">UL Designer</p>
+                </div>
               </div>
             </li>
           </ul>
