--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </nav>
 
         <div class="header-connect">
-          <ul class="list">
+          <ul class="list connect">
             <li class="header-mail">
               <a class="link grey" href="mailto:info@devstudio"
                 >info@devstudio.com</a
@@ -199,26 +199,30 @@
     <!--Підвал сторінки-->
     <footer class="footer">
       <div class="container">
+        <div class="mb-20">
         <a class="studio logo-link" href="./index.html"
           ><span class="logo">Web</span>Studio</a
         >
+        </div>
+        <div class="footer-adress">
         <address style="font-style: normal">
           <ul class="list">
-            <li>
-              <a class="white mb-20" href="">г.Киев, пр-т Леси Украинки, 26</a>
+            <li class="mb-9">
+              <a class="white" href="">г.Киев, пр-т Леси Украинки, 26</a>
             </li>
-            <li>
+            <li class="mb-9">
               <a class="link grey" href="mailto:info@example.com"
                 >info@example.com</a
               >
-            </li>
-            <li>
+            </li >
+            <li  class="mb-60">
               <a class="link grey" href="tel:+380991111111"
                 >+38 099 111 11 11</a
               >
             </li>
           </ul>
         </address>
+      </div>
       </div>
     </footer>
   </body>
