--- a/portfolio.html
+++ b/portfolio.html
@@ -25,46 +25,42 @@
     <!--Зміст-->
 
     <header class="header">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <nav class="nav-container">
-              <a class="header-logo" href="./index.html"
-                ><span class="logo">Web</span>Studio</a
+      <div class="container header-container">
+        <nav class="nav-container">
+          <a class="header-logo" href="./index.html"
+            ><span class="logo">Web</span>Studio</a
+          >
+          <ul class="header-list">
+            <li class="header-item">
+              <a class="link nave" href="./index.html">Студия</a>
+            </li>
+            <li class="header-item">
+              <a class="link nave" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="header-item">
+              <a class="link nave" href="">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="header-connect">
+          <ul class="list connect">
+            <li class="header-mail">
+              <a class="link grey" href="mailto:info@devstudio"
+                >info@devstudio.com</a
               >
-              <!--навігація на інші сторінки-->
-              <ul class="list">
-                <li class="header-item">
-                  <a class="link nave" href="./index.html">Студия</a>
-                </li>
-                <li class="header-item">
-                  <a class="link nave" href="./portfolio.html">Портфолио</a>
-                </li>
-                <li class="header-item">
-                  <a class="link nave" href="">Контакты</a>
-                </li>
-              </ul>
-            </nav>
+            </li>
 
-            <div class="header-connect">
-              <ul class="list">
-                <li class="header-mail">
-                  <a class="link grey" href="mailto:info@devstudio"
-                    >info@devstudio.com</a
-                  >
-                </li>
-
-                <li class="header-tel">
-                  <a class="link grey" href="tel:+380991111111"
-                    >+38 096 111 11 11</a
-                  >
-                </li>
-              </ul>
-            </div>
-          </div>
+            <li class="header-tel">
+              <a class="link grey" href="tel:+380991111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
         </div>
       </div>
     </header>
+
     <div class="line"></div>
 
     <div class="container">
@@ -129,7 +125,9 @@
             </div>
           </div>
         </div>
+      </div>
 
+      <div class="row">
         <div class="col-4">
           <div class="card">
             <div class="card-header">
@@ -165,7 +163,9 @@
             </div>
           </div>
         </div>
+      </div>
 
+      <div class="row">
         <div class="col-4">
           <div class="card">
             <div class="card-header">
